--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: "Home"
             </h2>
             <div class="text-gray-400 text-xl leading-8">
                 Getting older doesn't mean we've hit an expiration date.
-                AgeWell uses research based technologies to help older individuals cultivate meaningful social engagement and helps them plan their achievements of tomorrow.
+                AgeWell uses research-based technologies to help individuals cultivate meaningful social engagement.
             </div>
         </div>
     </div>
