--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: "Home"
             </h2>
             <div class="text-gray-400 text-xl leading-8">
                 Getting older doesn't mean we've hit an expiration date.
-                AgeWell uses research-based technologies to help individuals plan for what's ahead and cultivate meaningful social engagement.
+                AgeWell uses research-based technologies to help you plan for tomorrow and connect to the communities and services that help you live a more fufilling life.
             </div>
         </div>
     </div>
