--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: "Home"
             <div class="w-3/4 mx-auto">
                 <!-- Video -->
                 <div class="relative z-10">
-                    <video class="shadow-lg rounded-lg" src="{{ 'assets/videos/top-video-5.mp4' | relative_url }}" autoplay="" loop="" muted="" playsinline="">
+                    <video class="shadow-lg rounded-lg" src="{{ 'assets/videos/top-video-6.mp4' | relative_url }}" autoplay="" loop="" muted="" playsinline="">
                     </video>
                 </div>
             </div>
@@ -38,11 +38,10 @@ title: "Home"
         </div>
         <div class="md:order-1 max-w-xl">
             <h2 class="text-3xl text-white mb-4 leading-10">
-            We strive to make the active aging lifestyle meaningful and engaging.
+                Getting older doesn't mean we've hit an expiration date.
             </h2>
             <div class="text-gray-400 text-xl leading-8">
-                Getting older doesn't mean we've hit an expiration date.
-                AgeWell uses research-based technologies to help you plan for tomorrow and connect to the communities and services that help you live a more fufilling life.
+                AgeWell uses research-based technologies to help you plan for tomorrow and connect to the resources you need to achieve your goals.
             </div>
         </div>
     </div>
