changfes example goal cards

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: "Home"
             <div class="w-3/4 mx-auto">
                 <!-- Video -->
                 <div class="relative z-10">
-                    <video class="shadow-lg rounded-lg" src="{{ 'assets/videos/top-video-6.mp4' | relative_url }}" autoplay="" loop="" muted="" playsinline="">
+                    <video class="shadow-lg rounded-lg" src="{{ 'assets/videos/top-video-8.mp4' | relative_url }}" autoplay="" loop="" muted="" playsinline="">
                     </video>
                 </div>
             </div>
@@ -56,16 +56,16 @@ title: "Home"
         <div class="flex-auto mb-4 -mt-16 md:mt-0 md:mb-0 md:ml-8 md:order-2">
             <div class="rounded-xl shadow-md bg-white p-4 w-96 self-start" style="min-height: 1px; max-width: 50%; margin-left: 40%; transform: translate3d(0px, 3.5235031512605044px, 0px);">
                 <div class="uppercase font-light text-xs mb-1">Goal</div>
-                <h3 class="text-xl border-b-4 border-blue-500 pb-1">Travel</h3>
+                <h3 class="text-xl border-b-4 border-blue-500 pb-1">Career</h3>
                 <p class="text-gray-600 pt-4 pb-28">
-                    Take a trip to Brazil.
+                    Complete yoga instructor series.
                 </p>
             </div>
             <div class="rounded-xl shadow-md bg-white p-4 w-96 self-start" style="min-height: 1px; max-width: 50%; margin-top: -35%; transform: translate3d(0px, 33.14732142857143px, 0px);">
                 <div class="uppercase font-light text-xs mb-1">Goal</div>
-                <h3 class="text-xl border-b-4 border-yellow-500 pb-1">Exercise</h3>
+                <h3 class="text-xl border-b-4 border-yellow-500 pb-1">Community</h3>
                 <p class="text-gray-600 pt-4 pb-28">
-                    Walk for 30 minutes every day.
+                    Find youth mentorship opportunity.
                 </p>
             </div>
         </div>
